k8s/apps/default/registry/ui/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  labels:
    app: registry-ui
spec:
  type: ClusterIP
  ipFamilies:
    - IPv4
  selector:
    app: registry-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
