k8s/apps/default/registry/ui/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app registry-ui
spec:
  hostnames:
    - registry-ui.cbannister.xyz
  parentRefs:
    - name: internal-cbannister-xyz
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          port: 80
