k8s/apps/default/registry/ui/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: registry-ui
spec:
  podSelector:
    matchLabels:
      app: registry-ui
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: envoy
              app.kubernetes.io/component: proxy
              gateway: internal
      ports:
        - protocol: TCP
          port: http
